--- a/index.html
+++ b/index.html
@@ -1,138 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Appeal Portal</title>
-  <style>
-    body {
-      background: #1a1c1f;
-      color: #fff;
-      font-family: 'Segoe UI', sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      margin: 0;
-      padding: 2rem;
-    }
-
-    h1 {
-      margin-bottom: 1.5rem;
-      text-align: center;
-    }
-
-    form {
-      background-color: #2c2f33;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-      max-width: 500px;
-      width: 100%;
-    }
-
-    label {
-      display: block;
-      margin-top: 1rem;
-      font-weight: 600;
-    }
-
-    input,
-    textarea {
-      width: 100%;
-      padding: 10px;
-      margin-top: 6px;
-      border-radius: 6px;
-      border: none;
-      font-size: 1rem;
-      background-color: #23272a;
-      color: #fff;
-    }
-
-    button {
-      margin-top: 1.5rem;
-      padding: 12px 24px;
-      background-color: #5865f2;
-      border: none;
-      border-radius: 8px;
-      color: white;
-      font-size: 1rem;
-      font-weight: bold;
-      cursor: pointer;
-      width: 100%;
-    }
-
-    button:hover {
-      background-color: #4752c4;
-    }
-
-    .success {
-      margin-top: 1rem;
-      color: #43b581;
-      text-align: center;
-    }
-
-    .error {
-      margin-top: 1rem;
-      color: #f04747;
-      text-align: center;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Fracture Blacklist Appeal</title>
+<style>
+  body {
+    background: #2c2f33;
+    color: #fff;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 40px 20px;
+  }
+  form {
+    background: #23272a;
+    padding: 30px;
+    border-radius: 12px;
+    width: 100%;
+    max-width: 450px;
+  }
+  h1 {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  input, textarea {
+    width: 100%;
+    padding: 12px 10px;
+    margin: 10px 0;
+    border: none;
+    border-radius: 8px;
+    font-size: 1rem;
+  }
+  textarea {
+    resize: vertical;
+    min-height: 80px;
+  }
+  button {
+    background: #5865f2;
+    border: none;
+    color: white;
+    font-weight: bold;
+    font-size: 1.1rem;
+    padding: 14px;
+    width: 100%;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-top: 15px;
+  }
+  button:hover {
+    background: #4752c4;
+  }
+  .message {
+    margin-top: 20px;
+    text-align: center;
+    font-weight: bold;
+  }
+  .error {
+    color: #ff5555;
+  }
+  .success {
+    color: #55ff55;
+  }
+</style>
 </head>
 <body>
-  <h1>FRACTURE Ban Appeal Form</h1>
   <form id="appealForm">
-    <label for="username">Discord Username (e.g. fracture#0001)</label>
-    <input type="text" id="username" name="username" required />
-
-    <label for="userid">Discord User ID</label>
-    <input type="text" id="userid" name="userid" required />
-
-    <label for="date">Date of Blacklist</label>
-    <input type="date" id="date" name="date" required />
-
-    <label for="blacklistReason">Reason for Blacklist</label>
-    <textarea id="blacklistReason" name="blacklistReason" rows="3" required></textarea>
-
-    <label for="appealReason">Why should we remove your blacklist?</label>
-    <textarea id="appealReason" name="appealReason" rows="4" required></textarea>
-
+    <h1>Blacklist Appeal Form</h1>
+    <input type="text" name="username" placeholder="Discord Username" required />
+    <input type="text" name="userid" placeholder="Discord User ID" required />
+    <label for="date" style="color:#bbb; font-size:0.9rem;">Date of Blacklist</label>
+    <input type="date" name="date" id="date" required />
+    <textarea name="blacklistReason" placeholder="Reason for Blacklist" required></textarea>
+    <textarea name="appealReason" placeholder="Reason for Appeal" required></textarea>
     <button type="submit">Submit Appeal</button>
-    <p class="success" id="successMessage" style="display:none;">✅ Appeal submitted! Staff will review it soon, you will be notified about your result.</p>
-    <p class="error" id="errorMessage" style="display:none;">❌ There was a problem sending your appeal.</p>
+    <div id="message" class="message"></div>
   </form>
 
-  <script>
-    document.getElementById('appealForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
+<script>
+  const form = document.getElementById('appealForm');
+  const messageDiv = document.getElementById('message');
 
-      const username = document.getElementById('username').value;
-      const userid = document.getElementById('userid').value;
-      const date = document.getElementById('date').value;
-      const blacklistReason = document.getElementById('blacklistReason').value;
-      const appealReason = document.getElementById('appealReason').value;
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault();
+    messageDiv.textContent = '';
+    messageDiv.className = 'message';
 
-const response = await fetch("https://api.fracturesoftware.site/api/appeal", {
-  method: "POST",
-  headers: { "Content-Type": "application/json" },
-  body: JSON.stringify({ username, userid, date, blacklistReason, appealReason })
-});
+    const data = {
+      username: form.username.value.trim(),
+      userid: form.userid.value.trim(),
+      date: form.date.value,
+      blacklistReason: form.blacklistReason.value.trim(),
+      appealReason: form.appealReason.value.trim(),
+    };
 
+    try {
+      const res = await fetch('https://api.fracturesoftware.site/api/appeal', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(data),
+      });
 
-        if (response.ok) {
-          document.getElementById('successMessage').style.display = 'block';
-          document.getElementById('errorMessage').style.display = 'none';
-          document.getElementById('appealForm').reset();
-        } else {
-          throw new Error('Failed to send');
-        }
-      } catch (err) {
-        document.getElementById('successMessage').style.display = 'none';
-        document.getElementById('errorMessage').style.display = 'block';
-        console.error("Failed to send appeal:", err);
+      const result = await res.json();
+
+      if (res.ok && result.success) {
+        messageDiv.textContent = '✅ Appeal submitted successfully! We will review it shortly.';
+        messageDiv.classList.add('success');
+        form.reset();
+      } else {
+        messageDiv.textContent = '⚠️ ' + (result.error || 'Failed to submit appeal.');
+        messageDiv.classList.add('error');
       }
-    });
-  </script>
+    } catch (err) {
+      messageDiv.textContent = '⚠️ Network error, please try again later.';
+      messageDiv.classList.add('error');
+    }
+  });
+</script>
 </body>
 </html>
